<resources>
    <string name="app_name">hikedetective</string>
    <string name="cameraInstructionsTextView_text_activity_camera">scan a barcode to update an existing product or create a new one</string>
    <string name="nameTextInputLayout_hint_activity_create">Name</string>
    <string name="priceTextInputLayout_hint_activity_create">Price</string>
    <string name="quantityTextInputLayout_hint_activity_create">Quantity</string>
    <string name="unitTextInputLayout_hint_activity_create">Unit</string>
    <string name="storeTextInputLayout_hint_activity_create">Store (Optional)</string>
    <string name="saveButton_text_activity_create">Save</string>
    <string name="nameTextInputLayout_hint_activity_edit">Name</string>
    <string name="quantityTextInputLayout_hint_activity_edit">Quantity</string>
    <string name="unitTextInputLayout_hint_activity_edit">Unit</string>
    <string name="updateTextInputEditText_activity_edit">Update</string>
    <string name="fab_contentDescription_activity_main">Add/Update</string>
    <string name="fab_text_activity_main">Add/Update</string>
    <string name="latestPriceLabelTextView_text_activity_product">Latest Price</string>
    <string name="bestPriceLabelTextView_text_activity_product">Best Price</string>
    <string name="addNewPriceLabelTextView_text_activity_product">Add New Price</string>
    <string name="latestPriceTextView_text_activity_product">Price</string>
    <string name="latestDateTextView_text_activity_product">Date</string>
    <string name="latestStoreTextView_text_activity_product">Store</string>
    <string name="bestPriceTextView_text_activity_product">Price</string>
    <string name="bestDateTextView_text_activity_product">Date</string>
    <string name="bestStoreTextView_text_activity_product">Store</string>
    <string name="priceTextInputLayout_hint_activity_product">Price</string>
    <string name="storeTextInputLayout_hint_activity_product">Store (Optional)</string>
    <string name="calculateButton_text_activity_product">Calculate</string>
    <string name="removeImageButton_contentDescription_layout_price_history">Remove price entry</string>
    <string name="removeImageButton_title_layout_price_history">Remove</string>
    <string name="priceLabelTextView_text_layout_price_history">Price</string>
    <string name="timestampLabelTextView_text_layout_price_history">Timestamp</string>
    <string name="storeLabelTextView_text_layout_price_history">Store</string>
    <string name="nameLabelTextView_text_layout_product">Name</string>
    <string name="priceLabelTextView_text_layout_product">Price</string>
    <string name="dateLabelTextView_text_layout_product">Date</string>
    <string name="storeLabelTextView_text_layout_product">Store</string>
    <string name="snackbarLabelTextView_text_layout_snackbar">Create Product Without Barcode</string>
    <string name="skipImageButton_contentDescription_layout_snackbar">Skip</string>
    <string name="skipImageButton_title_layout_snackbar">Skip</string>
    <string name="sortOrder_contentDescription_action_bar_activity_main">Change product list sort order</string>
    <string name="sortOrder_title_action_bar_activity_main">Sort order</string>
    <string name="moreButton_title_menu_activity_product">More</string>
    <string name="viewPricesButton_title_menu_activity_product">View Prices</string>
    <string name="editButton_title_menu_activity_product">Edit</string>
    <string name="removeButton_title_menu_activity_product">Remove</string>
</resources>