<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/titleTextView_layout_snackbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:text="@string/snackbarLabelTextView_text_layout_snackbar"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
            android:textSize="12sp"
            app:fontFamily="@font/karla_bold" />

        <ImageButton
            android:id="@+id/skipImageButton_layout_snackbar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="0.25"
            android:background="@null"
            android:contentDescription="@string/skipImageButton_contentDescription_layout_snackbar"
            android:src="@drawable/baseline_arrow_forward_24"
            android:title="@string/skipImageButton_title_layout_snackbar"
            app:tint="?attr/colorOnPrimary" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>