<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:focusableInTouchMode="true"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/nameTextInputLayout_hint_activity_create">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTextInputEditText_activity_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/priceTextInputLayout_hint_activity_create">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceTextInputEditText_activity_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/quantityTextInputLayout_hint_activity_create">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantityTextInputEditText_activity_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:nextFocusDown="@id/unitTextInputEditText_activity_create"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/unitTextInputLayout_hint_activity_create">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/unitTextInputEditText_activity_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storeTextInputLayout_hint_activity_create">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/storeTextInputEditText_activity_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton_activity_create"
        style="@style/CustomButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/saveButton_text_activity_create" />

</RelativeLayout>