<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:focusableInTouchMode="true"
    tools:context=".EditActivity">

    <LinearLayout
        android:id="@+id/linearLayout_activity_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/updateButton_activity_edit"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/nameTextInputLayout_hint_activity_edit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTextInputEditText_activity_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/quantityTextInputLayout_hint_activity_edit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityTextInputEditText_activity_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/unitTextInputLayout_hint_activity_edit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unitTextInputEditText_activity_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/updateButton_activity_edit"
        style="@style/CustomButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/updateTextInputEditText_activity_edit" />

</RelativeLayout>