<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout_activity_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorTertiary"
    tools:context=".ProductActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView_activity_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleLatestPriceTextView_activity_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latestPriceLabelTextView_text_activity_product"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
                        app:fontFamily="@font/karla_bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?attr/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/priceLatestPriceTextView_activity_product"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="start"
                            android:maxLines="1"
                            android:text="@string/latestPriceTextView_text_activity_product"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />

                        <TextView
                            android:id="@+id/timeStampLatestPriceTextView_activity_product"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:text="@string/latestDateTextView_text_activity_product"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/storeLatestPriceTextView_activity_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:maxLines="1"
                        android:text="@string/latestStoreTextView_text_activity_product"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleBestPriceTextView_activity_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bestPriceLabelTextView_text_activity_product"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
                        app:fontFamily="@font/karla_bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?attr/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/priceBestPriceTextView_activity_product"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="start"
                            android:maxLines="1"
                            android:text="@string/bestPriceTextView_text_activity_product"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />

                        <TextView
                            android:id="@+id/timeStampBestPriceTextView_activity_product"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:text="@string/bestDateTextView_text_activity_product"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/storeBestPriceTextView_activity_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:maxLines="1"
                        android:text="@string/bestStoreTextView_text_activity_product"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleInflationCalculatorTextView_activity_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addNewPriceLabelTextView_text_activity_product"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
                        app:fontFamily="@font/karla_bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?attr/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/CustomTextInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/priceTextInputLayout_hint_activity_product">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/priceTextInputEditText_activity_product"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:maxLength="6"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/CustomTextInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/storeTextInputLayout_hint_activity_product">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/storeTextInputEditText_activity_product"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="20"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/calculateButton_activity_product"
                            style="@style/CustomButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="50dp"
                            android:text="@string/calculateButton_text_activity_product" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


